[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmat-tests"
version = "0.1.0"
description = "Contained Python test harness for local NASA GMAT binaries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "GMAT Test Suite Contributors"}]

[project.urls]
Homepage = "https://github.com/pljeroen/testsuite_gmat"
Repository = "https://github.com/pljeroen/testsuite_gmat"
Issues = "https://github.com/pljeroen/testsuite_gmat/issues"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov", "hypothesis"]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that require a real local GMAT installation",
]
